# TU_Many_Bots

./: .travis.yml  README.md  config_script.bash  dependencies.rosinstall  install_script.bash  map.pgm  map.yaml  repository.rosinstall
communication/: CMakeLists.txt  package.xml
control/: CMakeLists.txt  package.xml
darknet_ros/custom_model_training/: READEME.md  README.md
navigation/: CMakeLists.txt  package.xml
perception/: CMakeLists.txt  package.xml
slam/: CMakeLists.txt  package.xml
tmb_communication/: CMakeLists.txt  package.xml
tmb_communication/config/: base_local_planner_params_rto.yaml  costmap_common_params.yaml  costmap_params.yaml  gmapping_config.yaml  mapper_params_online_sync.yaml  rviz_basic_setup.rviz
tmb_communication/launch/: amcl_robot1.launch  complete_launch.launch  explore_robot1.launch  explore_robots.launch  move_base.launch  multi_map_merge.launch  multi_merge.launch  multi_slam.launch  navigation_mas.launch  one_robot.launch  robot1_nodes.launch  robot2_nodes.launch  robot_blind.launch  robot_nodes.launch  robot_nodes1.launch  robot_nodes2.launch  robots_launch.launch  robots_start.launch  robots_testing.launch  rviz.launch
tmb_communication/src/: gazebo_position_listener  position_listener  state_control  test  tf_lis.py  trace_removal
tmb_follow/: CMakeLists.txt  README.md  package.xml
tmb_follow/launch/: follow_rto.launch  tmb_follow.launch
tmb_follow/src/: rto_tf_broadcaster.py  rto_tf_listener.py  tmb_follow_pose_broadcaster.py  tmb_guiding_routine.py
tmb_messages/: CMakeLists.txt  package.xml
tmb_messages/msg/: Bounding_Box_Interpretation.msg  Computed_Pose.msg  Object_Sighted.msg  State_report.msg
tmb_models/: CMakeLists.txt  package.xml
tmb_models/worlds/: maze_clutter.world  maze_clutter_limited.world  maze_simple.world  maze_simple_2.world  simple_corridor.world
tmb_perception/: CMakeLists.txt  README.md  package.xml
tmb_perception/launch/: bounding_box.launch  object_detector.launch
tmb_perception/src/: bounding_box_interpreter  object_detector  pose_estimator  pose_resolver  target_distance_detector
tmb_perception/worlds/: simple_corridor.world
tmb_startup/: CMakeLists.txt  package.xml
tmb_state_control/: CMakeLists.txt  package.xml
(+476 files in other folders)
